--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/iconoLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OneInbox</title>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap">
+    <title>OneInbox</title>
   </head>
   <body>
     <div id="root"></div>
